--- a/index.html
+++ b/index.html
@@ -5,6 +5,49 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>ZP LiFE RPG HUD</title>
   </head>
+  <style>
+  :root { --bg:#0f172a; --card:#141c2f; --ink:#f8fafc; --muted:#9aa4b2; --line:#233047; --accent:#0ea5e9; }
+  body { background:#0b1220; color:var(--ink); font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Apple SD Gothic Neo, sans-serif; }
+  .topbar{ display:flex; gap:8px; padding:16px 20px; position:sticky; top:0; background:#0b1220; border-bottom:1px solid var(--line); z-index:10;}
+  .tab{ padding:8px 12px; border:1px solid var(--line); border-radius:8px; cursor:pointer; color:var(--muted);}
+  .tab.on{ color:var(--ink); background:#15223a; border-color:#2b3b5b;}
+  .loading{ padding:40px; }
+  .container{ padding:20px; }
+  .grid{ display:grid; grid-template-columns: 340px 1fr; gap:16px; }
+  .left{ display:flex; flex-direction:column; gap:16px; }
+  .right{ display:flex; flex-direction:column; gap:16px; }
+  .card{ background:var(--card); border:1px solid var(--line); border-radius:12px; padding:16px; }
+  .profile .avatar{ font-size:56px; }
+  .profile .title{ font-weight:700; margin:6px 0; }
+  .profile .hp{ color:var(--muted); font-size:13px; }
+  .progress{ height:6px; background:#0b1324; border-radius:999px; margin:10px 0;}
+  .progress>div{ height:100%; background:linear-gradient(90deg,#22d3ee,#0ea5e9); border-radius:999px; }
+  .meta{ display:grid; gap:6px; color:var(--muted); font-size:13px; }
+  .section{ margin-top:8px; }
+  .section-title{ font-weight:700; margin-bottom:8px; }
+  .skill-list{ display:flex; flex-direction:column; gap:8px; }
+  .skill-row{ display:grid; grid-template-columns: 110px 1fr 48px; align-items:center; gap:8px; }
+  .skill-name{ color:var(--muted); font-size:13px; }
+  .skill-bar{ height:8px; background:#0b1324; border-radius:999px; overflow:hidden; }
+  .skill-bar>div{ height:100%; background:#16a34a; }
+  .skill-level{ text-align:right; color:var(--muted); font-size:12px;}
+  .welcome{ text-align:center; font-weight:800; letter-spacing:2px; border:1px solid var(--line); border-radius:12px; padding:10px; background:#11192b; }
+  .stats-strip{ display:grid; grid-template-columns: repeat(5, 1fr); gap:8px; }
+  .stat{ background:#0f1a2e; border:1px solid var(--line); border-radius:10px; padding:10px; text-align:center;}
+  .stat .label{ color:var(--muted); font-size:12px; }
+  .stat .value{ font-weight:800; font-size:18px; }
+  .tile-grid{ display:grid; grid-template-columns: repeat(3, 1fr); gap:12px; }
+  .tile{ background:#0f1a2e; border:1px solid var(--line); border-radius:16px; padding:18px; text-decoration:none; color:var(--ink); display:flex; flex-direction:column; align-items:center; gap:8px; transition:.15s; }
+  .tile:hover{ border-color:#335085; transform: translateY(-2px); }
+  .tile-icon{ font-size:40px; }
+  .tile-title{ font-weight:700; text-align:center; }
+  .tile-desc{ font-size:12px; color:var(--muted); text-align:center; }
+  /* 기존 Today 페이지 카드/패널 스타일과 조화되도록 약간만 */
+  .page{ padding:20px; display:flex; flex-direction:column; gap:16px; }
+  .panel{ background:#0f1a2e; border:1px solid var(--line); border-radius:12px; }
+  .panel-title{ padding:12px 16px; border-bottom:1px solid var(--line); font-weight:700;}
+</style>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
