--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
   .page{ padding:20px; display:flex; flex-direction:column; gap:16px; }
   .panel{ background:#0f1a2e; border:1px solid var(--line); border-radius:12px; }
   .panel-title{ padding:12px 16px; border-bottom:1px solid var(--line); font-weight:700;}
+    .reward-grid{ display:grid; grid-template-columns: repeat(3, 1fr); gap:12px; padding:12px; }
+.reward-card{ background:#0f1a2e; border:1px solid var(--line); border-radius:12px; padding:14px; display:flex; flex-direction:column; gap:8px; }
+.reward-name{ font-weight:700; }
+.reward-cost{ color:var(--muted); font-size:13px; }
+.btn{ padding:8px 10px; border:1px solid #2b3b5b; background:#15223a; color:#e6eefb; border-radius:8px; cursor:pointer; }
+.btn:disabled{ opacity:.6; cursor:not-allowed; }
+.list{ padding:8px 12px; display:flex; flex-direction:column; gap:8px; }
+.row{ display:grid; grid-template-columns:120px 1fr 160px; gap:10px; align-items:center; }
+.empty{ color:var(--muted); padding:12px; }
 </style>
 
   <body>
